# tinyHTTP

./: .gitignore  CMakeLists.txt  Default.cmake  LICENSE  README.md
main/: CMakeLists.txt  RequestReader.cpp  RequestReader.h  tinyHTTP.cpp  tinyHTTP.h
main/httpparser/: httprequestparser.h  request.h  response.h
test/: CMakeLists.txt  main.cpp
webroot/: index.html
webroot/css/: main.css
